--- a/templates/two_factor/_wizard_forms.html
+++ b/templates/two_factor/_wizard_forms.html
@@ -1,5 +1,8 @@
 {% load i18n widget_tweaks %}
 
+{{ wizard.management_form }}
+{# This hidden form is required by the WizardView #}
+
 {% for field in wizard.form %}
   <div class="mb-3">
     {% if field.field.widget.input_type == 'checkbox' %}
